<?xml version="1.0"?>
<package format="2">
  <name>rmp_base</name>
  <version>0.0.2</version>
  <description>
    The rmp_base package provides a ros interface to control a Segway Robotics Mobility Platform. 
    In addition, navigation and status data are also published such as odometry, imu, mottor and battery status, ... 
  </description>
  <maintainer email="thomas.decandia@sri.com">Thomas de Candia</maintainer>
  <license>Private</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rmp_msgs</depend>
  <depend>tf</depend> 

  <export>
  </export>
</package>
