<?xml version="1.0"?>
<package format="2">
  <name>rmp_msgs</name>
  <version>0.0.2</version>
  <description>
    The rmp_msgs package defines rmp specific messages such as motor status, audio command, ...
  </description>
  <maintainer email="thomas.decandia@sri.com">Thomas de Candia</maintainer>
  <license>Private</license>

  <build_depend>message_generation</build_depend> 
  <exec_depend>message_runtime</exec_depend> 
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
